# reed_solomon_rs

./: Cargo.toml  LICENSE  README.md  TODOS.md  bench_results.md
benches/: my_benchmark.rs  scaling_benchmark.rs
src/: lib.rs  main.rs
src/decoder/: berlekamp_welch.rs
src/fec/: fec.rs
src/galois_field/: gf_alg.rs  largefield.rs  tables.rs
src/math/: addmul.rs  pivot_searcher.rs
