[package]
name = "reed_solomon_rs"
version = "0.1.0"
authors = ["Soham Jog <jogsoham2003@gmail.com>"]
edition = "2021"
description = "A Reed-Solomon Error Correction Code Library that uses the Berlekamp Welch Algorithm"
repository = "https://github.com/SohamJog/reed_solomon_rs"
license = "MIT"
keywords = ["reed-solomon", "error-correction", "rust", "library"]
categories = ["encoding", "cryptography"]


[dependencies]
once_cell = "1.19.0" 

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false